make our classes simplified by using div dquote> dquote> dquote> co-authored-by: Sonny Snyder <sendsonnymail@gmail.com>

--- a/boring-lecture.html
+++ b/boring-lecture.html
@@ -6,9 +6,11 @@
 </head>
 <body>
   <h1>The most boring subject of all!</h1>
-    <img class="intro" src="img/Troggy.jpeg" alt="An image of Troggy the Trogoldyte">
-  <h2 class="intro">Troglodytes</h2>
-  <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel blandit tortor, mattis vehicula dui. Duis id euismod magna, sed bibendum purus. Quisque eget lorem lorem. Donec malesuada id nisi vel hendrerit. Vivamus non felis lobortis, aliquam eros eu, fermentum arcu. Donec ut nisi in mi placerat vestibulum. Integer vehicula pellentesque dolor, ac tincidunt purus mattis at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam auctor ligula in consectetur maximus. Aliquam ultrices pretium finibus. Nam blandit ex neque, a lacinia enim iaculis et. Aliquam mollis enim id elit tempor viverra. Proin sed commodo metus.
+  <div class="Intro">
+  <img src="img/Troggy.jpeg" alt="An image of Troggy the Trogoldyte">
+  <h2>Troglodytes</h2>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris vel blandit tortor, mattis vehicula dui. Duis id euismod magna, sed bibendum purus. Quisque eget lorem lorem. Donec malesuada id nisi vel hendrerit. Vivamus non felis lobortis, aliquam eros eu, fermentum arcu. Donec ut nisi in mi placerat vestibulum. Integer vehicula pellentesque dolor, ac tincidunt purus mattis at. Interdum et malesuada fames ac ante ipsum primis in faucibus. Nam auctor ligula in consectetur maximus. Aliquam ultrices pretium finibus. Nam blandit ex neque, a lacinia enim iaculis et. Aliquam mollis enim id elit tempor viverra. Proin sed commodo metus.
 
     Integer nisl risus, efficitur at euismod nec, rhoncus in nulla. Donec vehicula consectetur mi in blandit. Duis gravida nisl vel congue dapibus. Ut blandit magna nec orci efficitur bibendum. Duis sit amet hendrerit lorem, vel vestibulum sapien. Sed sed sapien quis lorem pulvinar mollis. Maecenas dapibus orci dolor, quis varius lectus elementum eget. Suspendisse varius pellentesque pharetra. Donec vitae vestibulum quam, fringilla lobortis diam. Nullam tincidunt sapien quam, nec posuere sapien malesuada finibus. Cras sit amet ante hendrerit, sollicitudin ipsum at, tempus elit.</p>
+    </div>
 </body>
